Fixed min height for section and aligned footer text content to center.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,7 @@ body {
 section {
   padding: 40px 0;
   /* background-color: #f6f6e9; */
+  min-height: calc(100vh - 112px);
 }
 
 /* Global */
@@ -107,7 +108,7 @@ a:hover {
 .form-devise,
 .form-buy,
 .form-sell {
-  min-height: calc(100vh - 56px);
+  min-height: calc(100vh - 112px);
   padding: 40px 0;
 }
 
@@ -119,6 +120,12 @@ nav.navbar a.nav-link {
 nav.navbar a.nav-link:hover {
   /* color: yellow !important; */
   color: #005792 !important;
+}
+
+footer {
+  background-color: #f5f5f5;
+  height: 56px;
+  padding: 8px 0;
 }
 
 /* RESPONSIVE LAYOUT */
